--- a/software/docker-compose.yml
+++ b/software/docker-compose.yml
@@ -3,6 +3,7 @@ version: "2.3"
 
 services:
 
+  # base de datos relacional (configuración)
   database-server:
     image: mariadb/server:10.3
     container_name: ${DB_HOST:-irrigation_database}
@@ -24,6 +25,7 @@ services:
     logging:
       driver: none
 
+  # broker mensajes asíncronos
   broker:
     image: eclipse-mosquitto
     container_name: irrigation_broker
@@ -37,6 +39,7 @@ services:
     logging:
       driver: none
 
+  # base de datos no relacional (históricos)
   mongodb:
     image: mongo:4.4
     container_name: ${MONGODB_HOST:-irrigation_mongodb}
@@ -59,3 +62,57 @@ services:
       options:
         max-size: "500k"
         max-file: "3"
+
+  # api aut
+  service-oauth-users:
+    container_name: irrigation_auth
+    networks:
+      default:
+        aliases:
+          - irrigation_auth
+    build:
+      context: .
+      dockerfile: ./config/docker/oauth_users.Dockerfile
+      args:
+        - LOGS_FOLDER=logs
+    env_file: .env
+    restart: always
+    volumes:
+      - ./auth/src:/users/src
+      - ./logs:/users/logs
+      - ./.env:/users/.env
+      - ./auth/requirements.txt:/users/requirements.txt
+      - ./auth/wsgi.py:/users/wsgi.py
+      - ./auth/run.py:/users/run.py
+      - ./auth/init_database.py:/users/init_database.py
+    ports:
+      - ${AUTH_API_PORT}:5000
+    mem_limit: 1500m
+    memswap_limit: 100m
+    cpus: 1.0
+    cpu_shares: 614
+    logging:
+      driver: "none"
+
+  # nginx inverse proxy
+  # nginx:
+  #   image: nginx
+  #   networks:
+  #     default:
+  #       aliases:
+  #         - nginx_inverse_proxy
+  #   restart: always
+  #   env_file: .env
+  #   volumes:
+  #     - ./config/nginx/api.template:/etc/nginx/conf.d/api.template
+  #     - ./users_api.sock:/etc/nginx/api.sock
+  #     - ./logs/nginx/:/var/log/nginx
+  #   environment:
+  #     - TZ=Europe/Madrid
+  #     - WEBS_IP=${AUTH_API_HOST}
+  #   ports:
+  #     - ${PROXY_API_PORT}:80
+  #   command: /bin/bash -c "envsubst '$${WEBS_IP}' < /etc/nginx/conf.d/api.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
+  #   logging:
+  #     driver: "none"
+
