--- a/software/server/irrigation/requirements.txt
+++ b/software/server/irrigation/requirements.txt
@@ -7,3 +7,11 @@ marshmallow==3.16.0
 mysql_connector_repackaged==0.3.1
 paho_mqtt==1.6.1
 python-dotenv==0.20.0
+PyMySQL==1.0.2
+pymongo==4.1.1
+SQLAlchemy==1.4.39
+
+# Do not change those
+pep8==1.7.1
+flake8==3.9.2
+autopep8==1.5.7
