software (server irrigation) => microservicio encargado de la recolección de datos y el almacenamiento en la base de datos de mongodb. tests unitarios para el servicio de mensajes, observador de mensajes del controlador, servicios y dal de mongodb. docker-compose => nuevo servicio y fichero dockerfile para el recolector

--- a/software/.env_template
+++ b/software/.env_template
@@ -11,6 +11,9 @@ DB_PORT_BINDED=3306                               # port exposed outside the doc
 DB_DATABASE_IRRIGATION=database1
 DB_DATABASE_AUTH=database1
 
+# example uri for irrigation database
+DB_URI_IRRIGATION=mysql+pymysql://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${DB_DATABASE_IRRIGATION}
+
 
 # API
 API_HOST=docker_host                              # host used by docker containers for identifying the container in the docker network
@@ -24,6 +27,9 @@ MONGODB_PORT_BINDED=27017                         # port exposed outside the doc
 MONGODB_USER=user
 MONGODB_PASS=pass
 MONGODB_DATABASE=database3
+
+# example uri for mongo database
+MONGODB_URI=mongodb://${MONGODB_USER}:${MONGODB_PASS}@${MONGODB_HOST}:${MONGODB_PORT}/?authSource=admin&readPreference=primary&appname=MongoDB%20Compass&ssl=false
 
 
 # MQTT BROKER
