--- a/software/web/package.json
+++ b/software/web/package.json
@@ -1,21 +1,32 @@
 {
   "name": "irrigatioapp",
-  "private": false,
   "version": "0.0.1",
+  "private": false,
   "description": "Aplicación web para la gestión del sistema de riego",
   "author": "davalv",
   "scripts": {
+    "serve": "vite preview",
+    "build": "vite build",
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "axios": "^0.27.2",
+    "roboto-fontface": "*",
+    "vue": "^3.2.25",
+    "vue-router": "^4.1.2",
+    "vuetify": "^3.0.0-beta.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@mdi/font": "^6.9.96",
+    "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
+    "sass": "^1.53.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
+    "vite-plugin-vuetify": "^1.0.0-alpha.0",
+    "vue-cli-plugin-vuetify": "~2.5.1",
     "vue-tsc": "^0.34.7"
   }
 }
