--- a/software/web/package.json
+++ b/software/web/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kyvg/vue3-notification": "^2.3.5",
     "axios": "^0.27.2",
     "roboto-fontface": "*",
     "vue": "^3.2.25",
