--- a/software/web/package.json
+++ b/software/web/package.json
@@ -14,6 +14,7 @@
     "@kyvg/vue3-notification": "^2.3.5",
     "axios": "^0.27.2",
     "roboto-fontface": "*",
+    "sweetalert": "^2.1.2",
     "vue": "^3.2.25",
     "vue-router": "^4.1.2",
     "vuetify": "^3.0.0-beta.0",
