--- a/software/web/package.json
+++ b/software/web/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@kyvg/vue3-notification": "^2.3.5",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
+    "chartjs-adapter-moment": "^1.0.0",
     "roboto-fontface": "*",
     "sweetalert": "^2.1.2",
     "vue": "^3.2.25",
