web => nombre de la aplicación actualizado

--- a/software/web/package.json
+++ b/software/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "irrigatioapp",
+  "name": "irriapp",
   "version": "0.0.1",
   "private": false,
   "description": "Aplicación web para la gestión del sistema de riego",
