--- a/software/.env_template
+++ b/software/.env_template
@@ -19,6 +19,8 @@ DB_URI_IRRIGATION=mysql+pymysql://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${
 API_HOST=docker_host                              # host used by docker containers for identifying the container in the docker network
 API_PORT=5000
 
+AUTH_HOST=docker_host
+AUTH_API_PORT=9595
 
 # MONGO DB
 MONGODB_HOST=docker_host                          # host used by docker containers for identifying the container in the docker network
@@ -40,3 +42,9 @@ MQTT_WEB_PORT=8884                                # port used inside the docker 
 MQTT_WEB_PORT_BINDED=8884                         # port exposed outside the docker network
 MQTT_USER=user
 MQTT_PASS=pass
+
+
+# auth service
+USER_ADMIN_PASS=admin_password                   # admin user password (for auth service)
+SECRET_TOKEN=this_is_a_super_token
+TOKEN_EXP_DELTA=28800
