--- a/software/docker-compose.yml
+++ b/software/docker-compose.yml
@@ -44,6 +44,8 @@ services:
       - ${BROKER_WEBPORT_BINDED:-8884}:${BROKER_WEBPORT:-8884}
     logging:
       driver: none
+    depends_on:
+      - database-server
 
   mongodb:
     image: mongo:4.4
@@ -68,6 +70,49 @@ services:
         max-size: "500k"
         max-file: "3"
 
+  # api auth
+  auth:
+    container_name: ${AUTH_HOST:-irrigation_auth}
+    networks:
+      default:
+        aliases:
+          - ${AUTH_HOST:-irrigation_auth}
+    build:
+      context: .
+      dockerfile: ./config/docker/oauth_users.Dockerfile
+      args:
+        - LOGS_FOLDER=logs
+    env_file: .env
+    restart: always
+    ports:
+      - ${AUTH_API_PORT}:5000
+    depends_on:
+      - database-server
+    # logging:
+    #   driver: "none"
+
+  # nginx inverse proxy
+  # nginx:
+  #   image: nginx
+  #   networks:
+  #     default:
+  #       aliases:
+  #         - nginx_inverse_proxy
+  #   restart: always
+  #   env_file: .env
+  #   volumes:
+  #     - ./config/nginx/api.template:/etc/nginx/conf.d/api.template
+  #     - ./users_api.sock:/etc/nginx/api.sock
+  #     - ./logs/nginx/:/var/log/nginx
+  #   environment:
+  #     - TZ=Europe/Madrid
+  #     - WEBS_IP=${AUTH_API_HOST}
+  #   ports:
+  #     - ${PROXY_API_PORT}:80
+  #   command: /bin/bash -c "envsubst '$${WEBS_IP}' < /etc/nginx/conf.d/api.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
+  #   logging:
+  #     driver: "none"
+
   api:
     container_name: ${API_HOST}
     networks:
@@ -88,6 +133,8 @@ services:
       - ./server/irrigation/requirements.txt:/irrigation/requirements.txt
     ports:
       - ${API_PORT}:5000
+    depends_on:
+      - database-server
 
   recollector:
     container_name: irrigation_recollector
@@ -108,3 +155,7 @@ services:
       - ./logs:/irrigation/logs
       - ./.env:/irrigation/.env
       - ./server/irrigation/requirements.txt:/irrigation/requirements.txt
+    depends_on:
+    - database-server
+    - api
+    - mongodb
