web => gestión de autenticación en la app (servicio de auth) para controlar el acceso a las urls y nueva pantalla de login

--- a/software/web/package.json
+++ b/software/web/package.json
@@ -15,15 +15,21 @@
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "chartjs-adapter-moment": "^1.0.0",
+    "crypto-js": "^4.1.1",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "roboto-fontface": "*",
     "sweetalert": "^2.1.2",
     "vue": "^3.2.25",
     "vue-router": "^4.1.2",
     "vuetify": "^3.0.0-beta.0",
+    "vuex": "^4.0.2",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@mdi/font": "^6.9.96",
+    "@types/crypto-js": "^4.1.1",
+    "@types/js-cookie": "^3.0.2",
     "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "sass": "^1.53.0",
