--- a/software/docker-compose.yml
+++ b/software/docker-compose.yml
@@ -85,40 +85,18 @@ services:
     env_file: .env
     restart: always
     ports:
-      - ${AUTH_API_PORT}:5000
+      - ${AUTH_API_PORT:-5020}:5000
     depends_on:
       - database-server
     # logging:
     #   driver: "none"
 
-  # nginx inverse proxy
-  # nginx:
-  #   image: nginx
-  #   networks:
-  #     default:
-  #       aliases:
-  #         - nginx_inverse_proxy
-  #   restart: always
-  #   env_file: .env
-  #   volumes:
-  #     - ./config/nginx/api.template:/etc/nginx/conf.d/api.template
-  #     - ./users_api.sock:/etc/nginx/api.sock
-  #     - ./logs/nginx/:/var/log/nginx
-  #   environment:
-  #     - TZ=Europe/Madrid
-  #     - WEBS_IP=${AUTH_API_HOST}
-  #   ports:
-  #     - ${PROXY_API_PORT}:80
-  #   command: /bin/bash -c "envsubst '$${WEBS_IP}' < /etc/nginx/conf.d/api.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
-  #   logging:
-  #     driver: "none"
-
   api:
-    container_name: ${API_HOST}
+    container_name: ${API_HOST:-irrigation_api}
     networks:
       default:
         aliases:
-          - ${API_HOST}
+          - ${API_HOST:-irrigation_api}
     build:
       context: .
       dockerfile: ./config/docker/api.Dockerfile
@@ -132,7 +110,7 @@ services:
       - ./.env:/irrigation/.env
       - ./server/irrigation/requirements.txt:/irrigation/requirements.txt
     ports:
-      - ${API_PORT}:5000
+      - ${API_PORT:-5000}:5000
     depends_on:
       - database-server
 
@@ -159,3 +137,17 @@ services:
     - database-server
     - api
     - mongodb
+
+  web:
+    container_name: irrigation_web
+    networks:
+      default:
+        aliases:
+          - irrigation_web
+    build:
+      context: .
+      dockerfile: ./config/docker/web_server.Dockerfile
+    restart: always
+    env_file: .env
+    ports:
+      - ${WEB_PORT:-80}:80
