--- a/software/server/irrigation/requirements.txt
+++ b/software/server/irrigation/requirements.txt
@@ -10,6 +10,9 @@ python-dotenv==0.20.0
 PyMySQL==1.0.2
 pymongo==4.1.1
 SQLAlchemy==1.4.39
+scikit-fuzzy==0.4.2
+numpy==1.23.1
+matplotlib==3.5.2
 
 # Do not change those
 click
